# aries-askar

./: .gitignore  COMPLIANCE.yaml  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  build-swift-framework.sh  build-universal.sh  build-xcframework.sh  build.rs  build.sh  build_xcframework.sh  package.json
.github/: dependabot.yml
.github/workflows/: build-android.yml  build-ios.yml  build.yml  rusttest.yml
askar-bbs/: Cargo.toml  README.md
askar-bbs/benches/: blind_sign.rs  generators.rs  proof.rs  sign.rs  signature.rs
askar-bbs/src/: challenge.rs  collect.rs  commitment.rs  error.rs  generators.rs  hash.rs  io.rs  lib.rs  macros.rs  proof.rs  signature.rs  util.rs
askar-bbs/tests/: blind_sign.rs  commitment.rs  generators.rs  proof.rs  signature.rs
askar-crypto/: Cargo.toml  README.md
askar-crypto/benches/: enc.rs  kdf.rs
askar-crypto/fuzz/: Cargo.toml
askar-crypto/fuzz/fuzz_targets/: from_jwk.rs  from_public_bytes.rs  parse_jwk.rs
askar-crypto/src/: any.rs  buffer.rs  caps.rs  error.rs  lib.rs  random.rs  repr.rs  sign.rs
askar-crypto/src/alg/: aes.rs  aesgcm.rs  any.rs  bls.rs  chacha.rs  chacha20.rs  ec_common.rs  ed25519.rs  k256.rs  mod.rs  p256.rs  p256_hardware.rs  p384.rs  x25519.rs
askar-crypto/src/alg/aes/: cbc_hmac.rs  key_wrap.rs  mod.rs
askar-crypto/src/backend/: mod.rs
askar-crypto/src/buffer/: array.rs  hash.rs  mod.rs  secret.rs  string.rs  writer.rs
askar-crypto/src/encrypt/: crypto_box.rs  ecdh_1pu.rs  ecdh_es.rs  mod.rs  nacl_box.rs
askar-crypto/src/jwk/: borrow.rs  encode.rs  mod.rs  ops.rs  parts.rs
askar-crypto/src/kdf/: argon2.rs  concat.rs  ecdh_1pu.rs  ecdh_es.rs  mod.rs
askar-crypto/src/pack/: alg.rs  mod.rs
askar-crypto/test-no-std/: Cargo.toml
askar-crypto/test-no-std/.cargo/: config.toml
askar-keys/: Cargo.toml
askar-keys/src/: buffer.rs  caps.rs  encrypt.rs  error.rs  lib.rs  random.rs  serde_utils.rs
askar-keys/src/alg/: bls.rs  ed25519.rs  mod.rs  x25519.rs
askar-keys/src/jwk/: mod.rs  ops.rs  parse.rs
askar-keys/src/kdf/: argon2.rs  concat.rs  mod.rs
askar-keys/src/pack/: nacl_box.rs
askar-storage/: Cargo.toml  README.md
askar-storage/src/: any.rs  entry.rs  error.rs  future.rs  lib.rs  options.rs
askar-storage/src/backend/: any.rs  db_utils.rs  mod.rs  types.rs
askar-storage/src/backend/odbc/: db2.sql  mod.rs  provision.rs  r2d2_connection_pool.rs  test_db.rs
askar-storage/src/backend/postgres/: mod.rs  provision.rs  test_db.rs
askar-storage/src/backend/sqlite/: mod.rs  provision.rs
askar-storage/src/migration/: mod.rs  strategy.rs
askar-storage/src/protect/: hmac_key.rs  mod.rs  pass_key.rs  profile_key.rs  store_key.rs
askar-storage/src/protect/kdf/: mod.rs
askar-storage/src/wql/: mod.rs  query.rs  sql.rs  tags.rs
askar-storage/tests/: .gitignore  backends.rs  migration.rs
askar-storage/tests/utils/: mod.rs
askar-wql/: Cargo.toml
askar-wql/src/: lib.rs  query.rs
benches/: README.md  benchmark.rs
docs/: storage.md
include/: README.md  cbindgen.toml  libaries_askar.h  module.modulemap
src/: any.rs  db_utils.rs  error.rs  future.rs  key.rs  lib.rs  macros.rs  options.rs  random.rs  serde_util.rs  serde_utils.rs  sqlite.rs  store.rs  types.rs
src/backend/: any.rs  db_utils.rs  mod.rs  types.rs
src/backend/postgres/: mod.rs  provision.rs  test_db.rs
src/backend/sqlite/: mod.rs  provision.rs
src/backends/: any.rs  db_utils.rs  mod.rs
src/ffi/: error.rs  handle.rs  key.rs  log.rs  macros.rs  migration.rs  mod.rs  result_list.rs  secret.rs  store.rs  tags.rs  utils.rs
src/indy_compat/: mod.rs
src/keys/: any.rs  caps.rs  encrypt.rs  indy_key.rs  kdf.rs  keychain.rs  mod.rs  storage_key.rs  store.rs  store_key.rs  types.rs  wrap.rs
src/keys/alg/: mod.rs  (+2 more)
src/kms/: enc.rs  entry.rs  envelope.rs  indy_key.rs  key.rs  local_key.rs  mod.rs
src/migration/: mod.rs  strategy.rs
src/pool/: acquire.rs  executor.rs  manager.rs  mod.rs  pool.rs  queue.rs  resource.rs  sentinel.rs  util.rs  worker.rs
src/postgres/: mod.rs  pool.rs  provision.rs  test_db.rs
src/protect/: hmac_key.rs  mod.rs  pass_key.rs  profile_key.rs  store_key.rs  wrap_key.rs
src/resource/: mod.rs  pool.rs  worker.rs
src/sqlite/: _pool.rs  context.rs  mod.rs  pool.rs  provision.rs
src/storage/: entry.rs  key.rs  mod.rs  options.rs  store.rs  types.rs
src/uffi/: crypto.rs  entry.rs  error.rs  key.rs  mod.rs  scan.rs  session.rs  store.rs
src/wql/: lang.rs  mod.rs  sql.rs  tags.rs
tests/: backends.rs  db.rs  docker_pg.sh  faber.rs  indy_wallet_sqlite.db  indy_wallet_sqlite_upgraded.db  local_key.rs  migration.rs  store_copy.rs  store_key.rs
tests/faber.agent372766/: sqlite.db
tests/utils/: mod.rs
uniffi/: askar.udl
wrappers/javascript/: .eslintignore  .eslintrc.js  .eslintrc.yaml  .gitignore  jest.config.base.ts  jest.config.ts  lerna.json  makefile  package.json  pnpm-lock.yaml  run  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json  tsconfig.test.json
wrappers/javascript/react-native/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
wrappers/javascript/react-native/android/src/main/: AndroidManifest.xml
wrappers/javascript/react-native/android/src/main/java/com/reactnativeariesaskar/: AriesAskarModule.kt  AriesAskarPackage.kt  NativeProxy.java
wrappers/javascript/react-native/android/src/main/java/org/hyperledger/ariesaskar/: AriesAskarModule.java
wrappers/kotlin/: .gitignore  build-targets.sh  build.gradle.kts  local.db1  settings.gradle.kts
wrappers/python/: .gitignore  README.md  indy_test.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
wrappers/python/aries_askar/: __init__.py  bindings.py  crypto_box.py  ecdh.py  error.py  key.py  store.py  types.py  version.py
wrappers/python/aries_askar/bindings/: __init__.py  handle.py  lib.py
wrappers/python/aries_store/: __init__.py  bindings.py  error.py  store.py  types.py
wrappers/python/demo/: perf.py  test.py
wrappers/python/tests/: test_cleanup.py  test_crypto_box.py  test_jose_ecdh.py  test_keys.py  test_store.py
(+326 files in other folders)
