[workspace]
members = ["askar-crypto", "askar-storage"]
resolver = "2"

[package]
name = "aries-askar"
version = "0.3.1"
authors = ["Hyperledger Aries Contributors <aries@lists.hyperledger.org>"]
edition = "2021"
description = "Hyperledger Aries Askar secure storage"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hyperledger/aries-askar/"
categories = ["cryptography", "database"]
keywords = ["hyperledger", "aries", "ssi", "verifiable", "credentials"]
rust-version = "1.65"

[lib]
name = "aries_askar"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]
bench = false

[package.metadata.docs.rs]
features = ["all_backends"]
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["all_backends", "ffi", "logger", "migration"]
all_backends = ["postgres", "sqlite"]
ffi = ["dep:ffi-support", "logger"]
jemalloc = ["dep:jemallocator"]
logger = ["dep:env_logger", "dep:log", "askar-storage/log"]
postgres = ["askar-storage/postgres"]
sqlite = ["askar-storage/sqlite"]
pg_test = ["askar-storage/pg_test"]
migration = ["askar-storage/migration"]

[dependencies]
async-lock = "3.0"
env_logger = { version = "0.10", optional = true }
ffi-support = { version = "0.4", optional = true }
jemallocator = { version = "0.5", optional = true }
log = { version = "0.4", optional = true }
once_cell = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
zeroize = "1.5"

[dependencies.askar-crypto]
version = "0.3"
path = "./askar-crypto"
features = ["all_keys", "any_key", "argon2", "crypto_box", "std"]

[dependencies.askar-storage]
version = "0.1.0"
path = "./askar-storage"
default-features = false
features = ["any"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.8" }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"

[[bench]]
name = "benchmark"
harness = false
