[workspace]
members = ["askar-crypto", "askar-storage"]
resolver = "2"

[package]
name = "aries-askar"
version = "0.4.0"
authors = ["Hyperledger Aries Contributors <aries@lists.hyperledger.org>"]
edition = "2021"
description = "Hyperledger Aries Askar secure storage"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hyperledger/aries-askar/"
categories = ["cryptography", "database"]
keywords = ["hyperledger", "aries", "ssi", "verifiable", "credentials"]
rust-version = "1.67"

[package.metadata.docs.rs]
features = ["all_backends"]
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
bench = false
crate-type = ["staticlib", "rlib", "cdylib"]
name = "aries_askar"
path = "src/lib.rs"

[features]
all_backends = ["postgres", "sqlite"]
default = ["all_backends", "ffi", "logger", "migration"]
ffi = ["dep:ffi-support", "logger"]
jemalloc = ["dep:jemallocator"]
logger = ["dep:env_logger", "dep:log", "askar-storage/log"]
migration = ["askar-storage/migration"]
mobile_secure_element = ["askar-crypto/p256_hardware"]
pg_test = ["askar-storage/pg_test"]
postgres = ["askar-storage/postgres"]
sqlite = ["askar-storage/sqlite"]

[dependencies]
async-lock = "3.0"
env_logger = { version = "0.11", optional = true }
ffi-support = { version = "0.4", optional = true }
jemallocator = { version = "0.5", optional = true }
log = { version = "0.4", optional = true }
once_cell = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
zeroize = "1.5"

[dependencies.askar-crypto]
features = ["all_keys", "any_key", "argon2", "crypto_box", "std"]
path = "./askar-crypto"
version = "0.3.2"

[dependencies.askar-storage]
default-features = false
features = ["any"]
path = "./askar-storage"
version = "0.2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.8" }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"

[[bench]]
harness = false
name = "benchmark"
