[package]
name = "askar-storage"
version = "0.1.0"
authors = ["Hyperledger Aries Contributors <aries@lists.hyperledger.org>"]
edition = "2021"
description = "Hyperledger Aries Askar secure storage"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hyperledger/aries-askar/"
categories = ["cryptography", "database"]
keywords = ["hyperledger", "aries", "ssi", "verifiable", "credentials"]
rust-version = "1.58"

[package.metadata.docs.rs]
features = ["all_backends"]
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["all_backends", "log"]
all_backends = ["any", "postgres", "sqlite"]
any = []
migration = ["rmp-serde", "sqlx/macros"]
postgres = ["sqlx", "sqlx/postgres", "sqlx/tls-rustls"]
sqlite = ["sqlx", "sqlx/sqlite"]
pg_test = ["postgres"]

[dependencies]
arc-swap = "1.6"
async-lock = "2.5"
async-stream = "0.3"
bs58 = "0.5"
chrono = "0.4"
digest = "0.10"
futures-lite = "1.11"
hex = "0.4"
hmac = "0.12"
itertools = "0.11"
log = { version = "0.4", optional = true }
once_cell = "1.5"
percent-encoding = "2.0"
rmp-serde = { version= "1.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.5", features = ["rt-multi-thread", "time"] }
url = { version = "2.1", default-features = false }
uuid = { version = "1.2", features = ["v4"] }
zeroize = "1.5"

[dependencies.askar-crypto]
version = "0.2.5"
path = "../askar-crypto"
default-features = false
features = ["alloc", "argon2", "chacha", "std_rng"]

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = ["chrono", "runtime-tokio"]
optional = true

[dev-dependencies]
env_logger = "0.10"
hex-literal = "0.4"
rand = { version = "0.8" }

[[test]]
name = "backends"
