[package]
name = "askar-storage"
version = "0.2.0"
authors = ["Hyperledger Aries Contributors <aries@lists.hyperledger.org>"]
edition = "2021"
description = "Hyperledger Aries Askar secure storage"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hyperledger/aries-askar/"
categories = ["cryptography", "database"]
keywords = ["hyperledger", "aries", "ssi", "verifiable", "credentials"]
rust-version = "1.63"

[package.metadata.docs.rs]
features = ["all_backends"]
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
all_backends = ["any", "postgres", "sqlite"]
any = []
default = ["all_backends", "log"]
migration = ["dep:rmp-serde", "dep:sqlx", "sqlx?/macros"]
pg_test = ["postgres"]
postgres = ["dep:sqlx", "sqlx?/postgres", "sqlx?/tls-rustls"]
sqlite = ["dep:sqlx", "sqlx?/sqlite"]

[dependencies]
arc-swap = "1.6"
async-lock = "3.0"
async-stream = "0.3"
bs58 = "0.5"
chrono = "0.4"
digest = "0.10"
futures-lite = "2.0"
hex = "0.4"
hmac = "0.12"
itertools = "0.13"
log = { version = "0.4", optional = true }
once_cell = "1.5"
percent-encoding = "2.0"
rmp-serde = { version = "1.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.5", features = ["rt-multi-thread", "time"] }
url = { version = "2.1", default-features = false }
uuid = { version = "1.2", features = ["v4"] }
zeroize = "1.5"

[dependencies.askar-crypto]
default-features = false
features = ["alloc", "argon2", "chacha", "std_rng"]
path = "../askar-crypto"
version = "0.3"

[dependencies.sqlx]
default-features = false
features = ["chrono", "runtime-tokio"]
optional = true
version = "0.8"

[dev-dependencies]
env_logger = "0.10"
hex-literal = "0.4"
rand = { version = "0.8" }

[[test]]
name = "backends"
