[package]
name = "askar-wql"
version = "0.1.0"
edition = "2018"
authors = ["Hyperledger Aries Contributors <aries@lists.hyperledger.org>"]
description = "Hyperledger Aries Askar Wallet Query Language"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/hyperledger/aries-askar/"
categories = ["authentication", "cryptography"]
keywords = ["hyperledger", "indy", "ssi", "verifiable", "credentials"]

[lib]
name = "askar_wql"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["serde_support"]
serde_support = ["serde", "serde_json"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false }
serde_json = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
rand = "0.8"
serde_json = "1.0"
